# scrapcore_serialization

./: Cargo.toml  fix.sh  shell.nix  watch.sh
scrapcore_serialization/: Cargo.toml
scrapcore_serialization/src/: lib.rs  registry.rs  serialization.rs  test.rs
scrapcore_serialization/src/registry/: entry.rs  finalize.rs  hot_reloading.rs  index.rs  inline.rs  insert.rs  kind.rs  path_identifier.rs  reverse_id.rs
scrapcore_serialization/src/serialization/: assets_manager.rs  bevy.rs  box_wrapper.rs  error.rs  helpers.rs  macroquad.rs  migrate.rs  min_max.rs  miniquad.rs  primitives.rs  string.rs
scrapcore_serialization/src/serialization/error/: diagnostic.rs  internal.rs
scrapcore_serialization_macro/: Cargo.toml
scrapcore_serialization_macro/src/: error.rs  lib.rs  model.rs  registry.rs  tests.rs
scrapcore_serialization_macro/src/model/: attrs.rs  enums.rs  structs.rs
scrapcore_serialization_macro/src/registry/: parser.rs
scrapcore_serialization_macro/src/snapshots/: scrapcore_serialization_macro__tests__enum_tests.snap  scrapcore_serialization_macro__tests__enum_tests@bad_enum_many_fields.rs.snap  scrapcore_serialization_macro__tests__enum_tests@bad_enum_named.rs.snap  scrapcore_serialization_macro__tests__enum_tests@custom_name.rs.snap  scrapcore_serialization_macro__tests__enum_tests@minmax.rs.snap  scrapcore_serialization_macro__tests__enum_tests@no_schema.rs.snap  scrapcore_serialization_macro__tests__enum_tests@raw_conflict.rs.snap  scrapcore_serialization_macro__tests__enum_tests@raw_minmax.rs.snap  scrapcore_serialization_macro__tests__enum_tests@simple_case.rs.snap  scrapcore_serialization_macro__tests__enum_tests@type_conversions.rs.snap  scrapcore_serialization_macro__tests__registry_tests@conflict_asset_collection.rs.snap  scrapcore_serialization_macro__tests__registry_tests@conflict_singleton_asset.rs.snap  scrapcore_serialization_macro__tests__registry_tests@conflict_singleton_collection.rs.snap  scrapcore_serialization_macro__tests__registry_tests@conflict_singleton_collection_asset.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_all.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_assets_kind_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_item_kind_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_item_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_partial_registry_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_registry_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@custom_serialized_item_name.rs.snap  scrapcore_serialization_macro__tests__registry_tests@duplicate_types.rs.snap  scrapcore_serialization_macro__tests__registry_tests@no_schema.rs.snap  scrapcore_serialization_macro__tests__registry_tests@renaming_ids.rs.snap  scrapcore_serialization_macro__tests__registry_tests@renaming_ids_failcase.rs.snap  scrapcore_serialization_macro__tests__registry_tests@simple_registry.rs.snap  scrapcore_serialization_macro__tests__registry_tests@versioning.rs.snap  scrapcore_serialization_macro__tests__registry_tests@visibility.rs.snap  scrapcore_serialization_macro__tests__registry_tests@visiblity.rs.snap  scrapcore_serialization_macro__tests__struct_tests@custom_name.rs.snap  scrapcore_serialization_macro__tests__struct_tests@minmax.rs.snap  scrapcore_serialization_macro__tests__struct_tests@no_schema.rs.snap  scrapcore_serialization_macro__tests__struct_tests@raw_conflict.rs.snap  scrapcore_serialization_macro__tests__struct_tests@raw_minmax.rs.snap  scrapcore_serialization_macro__tests__struct_tests@simple_case.rs.snap  scrapcore_serialization_macro__tests__struct_tests@type_conversions.rs.snap
scrapcore_serialization_macro/src/test_cases/model/enum/: bad_enum_many_fields.rs  bad_enum_named.rs  custom_name.rs  minmax.rs  no_schema.rs  raw_conflict.rs  raw_minmax.rs  simple_case.rs  type_conversions.rs
scrapcore_serialization_macro/src/test_cases/model/struct/: custom_name.rs  minmax.rs  no_schema.rs  raw_conflict.rs  raw_minmax.rs  simple_case.rs  type_conversions.rs
scrapcore_serialization_macro/src/test_cases/registry/: conflict_asset_collection.rs  conflict_singleton_asset.rs  conflict_singleton_collection.rs  conflict_singleton_collection_asset.rs  custom_all.rs  custom_assets_kind_name.rs  custom_item_kind_name.rs  custom_item_name.rs  custom_partial_registry_name.rs  custom_registry_name.rs  custom_serialized_item_name.rs  duplicate_types.rs  no_schema.rs  renaming_ids.rs  renaming_ids_failcase.rs  simple_registry.rs  versioning.rs  visibility.rs  visiblity.rs
scrapcore_serialization_tests/: Cargo.toml  schema.json
scrapcore_serialization_tests/src/: lib.rs  tests.rs
scrapcore_serialization_tests/test_db/: major.json  person.json
slabmap/: Cargo.toml
slabmap/src/: lib.rs  mem.rs
