[workspace]
resolver = "2"
members = [
    "scrapcore_serialization",
    "scrapcore_serialization_macro",
    "scrapcore_serialization_tests",
    "slabmap",
]

[workspace.dependencies]
ahash = "0.8.11"
assets_manager = "0.11"
attribute-derive = "0.9"
bevy_asset = "0.13"
convert_case = "0.6"
darling = "0.20.8"
duplicate = "1"
itertools = "0.12"
lazy_static = "1"
macroquad = { version = "0.4", default-features = false }
miette = { version = "7" }
miniquad = { version = "0.4", default-features = false }
nohash-hasher = "0.2"
prettyplease = "0.2"
proc-macro-crate = "3"
proc-macro2 = "1.0"
quote = "1.0"
schemars = "0.8"
serde = "1"
serde_json = "1"
syn = "2.0"
thiserror = "1"
walkdir = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
