[package]
name = "scrapcore_serialization"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
bevy_asset = { workspace = true, optional = true }
duplicate = { workspace = true }
itertools = { workspace = true }
macroquad = { workspace = true, optional = true, default-features = false }
miette = { workspace = true, optional = true }
miniquad = { workspace = true, optional = true, default-features = false }
schemars = { workspace = true }
scrapcore_serialization_macro = { path = "../scrapcore_serialization_macro", optional = true }
serde = { workspace = true, features = ["derive"] }
slabmap = { path = "../slabmap" }
thiserror = { workspace = true }

[dev-dependencies]
schemars = { workspace = true }
scrapcore_serialization_macro = { path = "../scrapcore_serialization_macro" }

[features]
miette = ["dep:miette"]
bevy = ["dep:bevy_asset"]
miniquad = ["dep:miniquad"]
macroquad = ["dep:macroquad"]
derive = ["dep:scrapcore_serialization_macro"]
