[package]
name = "scrapcore_serialization_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
attribute-derive = { workspace = true }
convert_case = { workspace = true }
darling = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1.38.0", features = ["glob"] }
prettyplease = { workspace = true }
