[package]
name = "scrapcore_serialization_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrapcore_serialization = {path = "../scrapcore_serialization", features = ["derive"]}
thiserror = {workspace = true}
serde = {workspace = true}
walkdir = {workspace = true}
serde_json = {workspace = true}
schemars = {workspace = true}