[package]
name = "scrapcore_serialization_test"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { workspace = true }
scrapcore_serialization = { path = "../scrapcore_serialization", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde", "schemars"]
