[package]
name = "slabmap"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
bimap = { workspace = true }
nohash-hasher = { workspace = true }
serde = { workspace = true, optional = true }
slab = { workspace = true }

[features]
serde = ["dep:serde"]
